Fix drag and drop on firefox

--- a/src/docs/ts/Layouts/Demos/Flip/style.css
+++ b/src/docs/ts/Layouts/Demos/Flip/style.css
@@ -8,14 +8,6 @@ demo-flip img {
 	transition: opacity .5s;
 	transition-timing-function: ease-in-out;
 	width: 100%;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	-webkit-user-drag: none;
-	-khtml-user-drag: none;
-	-moz-user-drag: none;
-	-o-user-drag: none;
-	user-drag: none;
 	cursor: grab;
 }
 
